# dota-betting-autopilot

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
app/: cli.py  main.py  replay_fetcher.py  replay_trajectory.py  replay_trajectory_dataset.py
app/collectors/: __init__.py  match_collector.py  odds_collector.py  oddspapi_odds_collector.py  pandascore_match_collector.py  (+2 more)
data/: autopilot.db  streamer_transcript.txt
docs/: public_match_page_data_feasibility.md  stratz_historical_data_feasibility.md
tests/: history_test_helpers.py  ml_test_helpers.py  roster_test_helpers.py  test_autopilot_service.py  test_bet_scorer.py  test_bet_selector.py  test_cli.py  test_cli_analyze_edge.py  test_cli_data_io.py  test_cli_draft_ml.py  test_cli_evaluate_ml.py  test_cli_ewc_status.py  test_cli_feature_status.py  test_cli_fetch_matches.py  test_cli_fetch_odds.py  test_cli_historical_ml.py  test_cli_history_status.py  test_cli_lineage_status.py  test_cli_ml.py  test_cli_public_pages.py  test_cli_report_status.py  test_cli_roster_status.py  test_cli_settlement.py  test_cli_stratz_feasibility.py  test_cli_sync_history.py  test_cli_sync_rosters.py  test_config_loader.py  test_csv_export.py  test_dataset_inspection.py  test_draft_history_storage.py  test_draft_ml_dataset.py  test_edge_analysis.py  test_evaluation_backtest.py  test_evaluation_metrics.py  test_ewc_2026_scope.py  test_fonbet_history_cli.py  test_fonbet_history_client.py  test_fonbet_history_exporter.py  test_fonbet_history_normalize.py  test_historical_catboost_diagnostics.py  (+58 more)
(+99 files in other folders)
