[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dota-betting-autopilot"
version = "0.1.0"
description = "Rule-based paper betting autopilot MVP for Dota 2 research."
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"
